--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,58 @@
-* {
-  box-sizing: border-box;
+/*External CSS*/
+
+/*Global CSS Variables*/
+:root{
+/*--colorRed: ;*/
+--primaryColor:#e5989b;
+--secondaryColor:#b5838d;
+--accentColor:#6d6875;
+--colorWhite: #fff;
+--colorBlack: #000;
 }
 
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
+/*body is a CSS Selector*/
+/*{} indicates a CSS Declaration*/
+body{
+  /*property:value; is a CSS Rule*/
+  margin:0;
+  /*background-color:var(--colorRed);*/
 }
 
-nav {
+header{
+  border-bottom:  5px solid var(--primaryColor);
+}
+
+ul{
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  flex-direction: row;
+  justify-content: end;
+  list-style-type: none;
+  gap: 20px;
+}
+
+main{
+  height: 100vh;
+}
+
+.blimedcard{
+  width: 300px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
+  align-items: center;
 }
 
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
+.blimedcard >button{
+  background-color: var(--primaryColor);
+  color: var(--colorWhite);
 }
 
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
+.blimedcard >button:hover {
+  background-color: var(--secondaryColor);
 }
 
-main {
-  padding: 1rem;
-}
 
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+
+footer{
+  border-top: 5px solid var(--primaryColor);
 }
