--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,30 @@
 --accentColor:#6d6875;
 --colorWhite: #fff;
 --colorBlack: #000;
+
+--cardWidth: 300px;
+--halfNhalf: 50%;
+--spaceSmall:10px;
+--spaceMedium: 20px;
+--spaceLarge: 30px;
+}
+
+/*Global CSS*/
+.spaceAround{
+  justify-content: space-around;
+  align-items: center;
+}
+.spaceBetween{
+  justify-content: space-between;
+  align-items: center;
+}
+.spaceEvenly{
+  justify-content: space-evenly;
+  align-items: center;
+}
+.center{
+  justify-content: center;
+  align-items: center;
 }
 
 /*body is a CSS Selector*/
@@ -26,12 +50,17 @@ ul{
   display: flex;
   flex-direction: row;
   justify-content: end;
+  align-items: center;
   list-style-type: none;
   gap: 20px;
+  padding: 0 20px;
 }
 
 main{
+  /*local CSS Variable*/
+  --mainColor: beige;
   height: 100vh;
+  border: 2px dotted var(--mainColor);
 }
 
 .blimedcard{
@@ -49,6 +78,11 @@ main{
 
 .blimedcard >button:hover {
   background-color: var(--secondaryColor);
+}
+
+.section{
+  height: 100vh;
+  display: flex;
 }
 
 
